CNogosek: Mass update...Spring 4, Spring Java Based Config, Java 8, Tomcat 8, Eclipse project settings

--- a/Poker/ant/build.xml
+++ b/Poker/ant/build.xml
@@ -31,6 +31,8 @@
 	</target>
 
 	<target name="-init">
+		<antcall target="-clean">
+		</antcall>
 		<delete dir="${dir.build}" failonerror="false" includeemptydirs="true" />
 		<delete dir="${dir.lib}" failonerror="false" includeemptydirs="true" />
 		<delete dir="${dir.binaries}" failonerror="false" includeemptydirs="true" />
