--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -28,9 +28,13 @@
     	<dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-webmvc" org="org.springframework" rev="${spring-version}" />
         
+        <!-- Jackson -->
+        <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
+        <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
+        <dependency name="jackson-databind" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
+        
         <!-- Other Libraries -->
         <dependency name="log4j" org="log4j" rev="1.2.15" />
-    	<dependency name="servlet-api" org="javax.servlet" rev="2.5" />
         <dependency name="commons-logging" org="commons-logging" rev="1.1.3" />    
             
     	<!-- Development Libraries (Testing) -->
