--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -32,10 +32,17 @@
         <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-databind" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
+		<dependency org="com.fasterxml.jackson.datatype" name="jackson-datatype-joda" rev="${jackson-version}"/>
         
         <!-- Other Libraries -->
         <dependency name="log4j" org="log4j" rev="1.2.15" />
         <dependency name="commons-logging" org="commons-logging" rev="1.1.3" />    
+        <dependency org="joda-time" name="joda-time" rev="2.4"/>
+        <dependency org="org.hibernate" name="hibernate-validator" rev="5.1.2.Final"/>
+        <dependency org="javax.validation" name="validation-api" rev="1.1.0.Final"/>
+        <dependency org="org.jboss.logging" name="jboss-logging" rev="3.1.4.GA"/>
+        <dependency org="com.fasterxml" name="classmate" rev="1.0.0"/>
+        <dependency org="org.apache.commons" name="commons-lang3" rev="3.3.2"/>
             
     	<!-- Development Libraries (Testing) -->
     	<dependency name="junit" org="junit" rev="4.7" conf="dev" />
