--- a/Poker/.classpath
+++ b/Poker/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Source"/>
 	<classpathentry kind="src" path="UnitTests"/>
-	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="Configuration"/>
+	<classpathentry kind="src" path="EndpointTests"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
