--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -27,7 +27,7 @@
     	<dependency name="spring-context-support" org="org.springframework" rev="${spring-version}" />
     	<dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-webmvc" org="org.springframework" rev="${spring-version}" />
-        
+        <dependency name="spring-test" org="org.springframework" rev="${spring-version}" conf="dev" />
         <!-- Jackson -->
         <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
@@ -47,6 +47,11 @@
     	<!-- Development Libraries (Testing) -->
     	<dependency name="junit" org="junit" rev="4.7" conf="dev" />
     	<dependency name="mockito-all" org="org.mockito" rev="1.9.5" conf="dev" />
-        
+        <dependency name="json-path" org="com.jayway.jsonpath" rev="0.9.1" conf="dev" />
+        <dependency name="json-smart" org="net.minidev" rev="1.3" conf="dev" />
+		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.7" conf="dev" />
+		<dependency org="org.easytesting" name="fest-assert" rev="1.4" conf="dev" />
+		<dependency org="org.easytesting" name="fest-util" rev="1.2.5" conf="dev" />
+		
     </dependencies>
 </ivy-module>
