--- a/Poker/.classpath
+++ b/Poker/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="Source"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="UnitTests"/>
 	<classpathentry kind="src" path="Configuration"/>
 	<classpathentry kind="src" path="EndpointTests"/>
