--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -43,6 +43,7 @@
         <dependency org="org.jboss.logging" name="jboss-logging" rev="3.1.4.GA"/>
         <dependency org="com.fasterxml" name="classmate" rev="1.0.0"/>
         <dependency org="org.apache.commons" name="commons-lang3" rev="3.3.2"/>
+        <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0"/>
             
     	<!-- Development Libraries (Testing) -->
     	<dependency name="junit" org="junit" rev="4.7" conf="dev" />
