CNogosek: Added endpoint tests to ANT build

--- a/Poker/ant/build.properties
+++ b/Poker/ant/build.properties
@@ -1,12 +1,17 @@
 dir.ivy=ivy
-dir.build=build
+dir.build=../build
 dir.lib=${dir.build}/lib
-dir.binaries=bin
+dir.binaries=${dir.build}/bin
 dir.source=../src
 
 dir.unitTestSource=../UnitTests
-dir.testBinaries=testBin
+dir.endpointTestSource=../EndpointTests
+dir.unitTestBinaries=${dir.build}/unitTestBin
+dir.endpointTestBinaries=${dir.build}/endpointTestBin
 
-dir.log=log
-dir.junitResults=${dir.build}/JunitResults
+
+dir.log=${dir.build}/Reports
+dir.junitResults=${dir.log}/JunitResults
 dir.junitReports=${dir.log}/JunitReports
+dir.endpointTestResults=${dir.log}/EndpointTestResults
+dir.endpointTestReports=${dir.log}/EndpointTestReports
