--- a/Poker/ant/build.properties
+++ b/Poker/ant/build.properties
@@ -1,3 +1,7 @@
+war.name=Poker.war
+dir.webcontent=../WebContent
+
+dir.dist=${dir.build}/dist
 dir.ivy=ivy
 dir.build=../build
 dir.lib=${dir.build}/lib
