--- a/Poker/ant/build.properties
+++ b/Poker/ant/build.properties
@@ -7,12 +7,12 @@ dir.build=../build
 dir.lib=${dir.build}/lib
 dir.binaries=${dir.build}/bin
 dir.source=../src
+dir.configuration=../Configuration
 
 dir.unitTestSource=../UnitTests
 dir.endpointTestSource=../EndpointTests
 dir.unitTestBinaries=${dir.build}/unitTestBin
 dir.endpointTestBinaries=${dir.build}/endpointTestBin
-
 
 dir.log=${dir.build}/Reports
 dir.junitResults=${dir.log}/JunitResults
