--- a/Poker/.classpath
+++ b/Poker/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="UnitTests"/>
-	<classpathentry kind="src" path="Configuration"/>
 	<classpathentry kind="src" path="EndpointTests"/>
+	<classpathentry kind="src" path="Configuration"/>
+	<classpathentry kind="src" path="Scripts"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
