--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -1,65 +1,61 @@
-<!--
-   Chad Nogosek
--->
-<ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-       xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
+<!-- Chad Nogosek -->
+<ivy-module version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
     <!-- Definitions -->
-    <info
-        organisation="com.nogo"
-        module="Poker"
-        status="integration">
-	</info>
-	
-	<configurations>
-	    <conf name="app" description="application specific dependencies" />
-	    <conf name="dev" description="development specific dependencies" visibility="private" />
-	    <conf name="build" description="build specific dependencies" visibility="private"/>
-	</configurations>
+    <info organisation="com.nogo" module="Poker" status="integration">
+    </info>
 
-    <dependencies defaultconfmapping="*->master(default)">
-    
-    	<!-- Spring Libraries -->
-    	<dependency name="spring-context" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-aop" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-beans" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-core" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-expression" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-context-support" org="org.springframework" rev="${spring-version}" />
-    	<dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
+    <configurations>
+        <conf name="app" description="application specific dependencies" />
+        <conf name="dev" description="development specific dependencies" visibility="private" />
+        <conf name="build" description="build specific dependencies" visibility="private" />
+
+    </configurations>
+
+    <dependencies defaultconfmapping="*->app(default)">
+
+        <!-- Spring Libraries -->
+        <dependency name="spring-context" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-aop" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-beans" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-core" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-expression" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-context-support" org="org.springframework" rev="${spring-version}" />
+        <dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-webmvc" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-test" org="org.springframework" rev="${spring-version}" conf="dev" />
-        
+
         <!-- Jackson -->
         <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-databind" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
-		<dependency org="com.fasterxml.jackson.datatype" name="jackson-datatype-joda" rev="${jackson-version}"/>
-		
-		<!--  AspectJ -->
-		<dependency name="aopalliance" org="aopalliance" rev="1.0" />
-		<dependency name="aspectjrt" org="org.aspectj" rev="${aspectj-version}" />
-		<dependency name="aspectjweaver" org="org.aspectj" rev="${aspectj-version}" />
-		
-        
+        <dependency org="com.fasterxml.jackson.datatype" name="jackson-datatype-joda" rev="${jackson-version}" />
+
+        <!-- AspectJ -->
+        <dependency name="aopalliance" org="aopalliance" rev="1.0" />
+        <dependency name="aspectjrt" org="org.aspectj" rev="${aspectj-version}" />
+        <dependency name="aspectjweaver" org="org.aspectj" rev="${aspectj-version}" />
+
+
         <!-- Other Libraries -->
-        <dependency name="log4j" org="log4j" rev="1.2.15" />
-        <dependency name="commons-logging" org="commons-logging" rev="1.1.3" />    
-        <dependency org="joda-time" name="joda-time" rev="2.4"/>
-        <dependency org="org.hibernate" name="hibernate-validator" rev="5.1.2.Final"/>
-        <dependency org="javax.validation" name="validation-api" rev="1.1.0.Final"/>
-        <dependency org="org.jboss.logging" name="jboss-logging" rev="3.1.4.GA"/>
-        <dependency org="com.fasterxml" name="classmate" rev="1.0.0"/>
-        <dependency org="org.apache.commons" name="commons-lang3" rev="3.3.2"/>
-        <dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0"/>
-            
-    	<!-- Development Libraries (Testing) -->
-    	<dependency name="junit" org="junit" rev="4.7" conf="dev" />
-    	<dependency name="mockito-all" org="org.mockito" rev="1.9.5" conf="dev" />
+        <dependency name="log4j" org="log4j" rev="1.2.17" />
+        <dependency name="commons-logging" org="commons-logging" rev="1.1.3" />
+        <dependency name="joda-time" org="joda-time" rev="2.4" />
+        <dependency name="hibernate-validator" org="org.hibernate" rev="5.1.2.Final" />
+        <dependency name="validation-api" org="javax.validation" rev="1.1.0.Final" />
+        <dependency name="jboss-logging" org="org.jboss.logging" rev="3.1.4.GA" />
+        <dependency name="classmate" org="com.fasterxml" rev="1.0.0" />
+        <dependency name="commons-lang3" org="org.apache.commons" rev="3.3.2" />
+        <dependency name="javax.servlet-api" org="javax.servlet" rev="3.1.0" />
+        <dependency name="gson" org="com.google.code.gson" rev="2.3.1" />
+
+        <!-- Development Libraries (Testing) -->
+        <dependency name="junit" org="junit" rev="4.7" conf="dev" />
+        <dependency name="mockito-all" org="org.mockito" rev="1.9.5" conf="dev" />
         <dependency name="json-path" org="com.jayway.jsonpath" rev="0.9.1" conf="dev" />
         <dependency name="json-smart" org="net.minidev" rev="1.3" conf="dev" />
-		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.7" conf="dev" />
-		<dependency org="org.easytesting" name="fest-assert" rev="1.4" conf="dev" />
-		<dependency org="org.easytesting" name="fest-util" rev="1.2.5" conf="dev" />
-		
+        <dependency name="slf4j-api" org="org.slf4j" rev="1.7.7" conf="dev" />
+        <dependency name="fest-assert" org="org.easytesting" rev="1.4" conf="dev" />
+        <dependency name="fest-util" org="org.easytesting" rev="1.2.5" conf="dev" />
+
     </dependencies>
 </ivy-module>
