CNogosek: Trimmed ANT scripts, fixed ivy

--- a/Poker/ant/global.properties
+++ b/Poker/ant/global.properties
@@ -1,20 +1,29 @@
 # Inputs Properties
-source.location=../src
-script.location=../Scripts
-source.libraries=../build/ivy
+project=Poker
+java.version=1.7
+dir.src=../src
+dir.src.script=../Scripts
+dir.src.unit=../UnitTests
+dir.src.endpoint=../EndpointTests
+dir.lib=../build/lib
 ivy=../ivy.xml
 ivysettings=../ivysettings.xml
-project=Poker
 api.generator=com.sandbox.script.api.ApiGenerator
 
 # Outputs Properties
-binaries.location=../build/classes
-script.binaries.location=../build/script
-jar.location=../build/jar
-documentation.location=../build/doc
+dir.bin=../build/bin/main
+dir.bin.script=../build/bin/script
+dir.bin.unit=../build/bin/unitTest
+dir.bin.endpoint=../build/bin/endpointTest
+jar.location=../build/dist/jar
+dir.doc=../build/Documentation
+dir.unit.test.results=../build/Reports/JUnitResults
+dir.unit.test.reports=../build/Reports/JUnitReports
+dir.endpoint.test.results=../build/Reports/EndpointTestResults
+dir.endpoint.test.reports=../build/Reports/EndpointTestReports
+dir.ivy.report=../build/Reports/Ivy
 
 # Compile Properties
-java.version=1.7
 
 # CheckStyle Properties
 
