--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -5,13 +5,12 @@
     </info>
 
     <configurations>
-        <conf name="app" description="application specific dependencies" />
-        <conf name="dev" description="development specific dependencies" visibility="private" />
         <conf name="build" description="build specific dependencies" visibility="private" />
-
+        <conf name="local" description="development specific dependencies" visibility="private" />
+        <conf name="master" description="application specific dependencies" />
     </configurations>
 
-    <dependencies defaultconfmapping="*->app(default)">
+    <dependencies defaultconf="master" defaultconfmapping="*->master,runtime()">
 
         <!-- Spring Libraries -->
         <dependency name="spring-context" org="org.springframework" rev="${spring-version}" />
@@ -22,8 +21,8 @@
         <dependency name="spring-context-support" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-webmvc" org="org.springframework" rev="${spring-version}" />
-        <dependency name="spring-test" org="org.springframework" rev="${spring-version}" conf="dev" />
-
+        <dependency name="spring-test" org="org.springframework" rev="${spring-version}" conf="local" />
+        
         <!-- Jackson -->
         <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
@@ -34,7 +33,6 @@
         <dependency name="aopalliance" org="aopalliance" rev="1.0" />
         <dependency name="aspectjrt" org="org.aspectj" rev="${aspectj-version}" />
         <dependency name="aspectjweaver" org="org.aspectj" rev="${aspectj-version}" />
-
 
         <!-- Other Libraries -->
         <dependency name="log4j" org="log4j" rev="1.2.17" />
@@ -47,15 +45,15 @@
         <dependency name="commons-lang3" org="org.apache.commons" rev="3.3.2" />
         <dependency name="javax.servlet-api" org="javax.servlet" rev="3.1.0" />
         <dependency name="gson" org="com.google.code.gson" rev="2.3.1" />
-
+        
         <!-- Development Libraries (Testing) -->
-        <dependency name="junit" org="junit" rev="4.7" conf="dev" />
-        <dependency name="mockito-all" org="org.mockito" rev="1.9.5" conf="dev" />
-        <dependency name="json-path" org="com.jayway.jsonpath" rev="0.9.1" conf="dev" />
-        <dependency name="json-smart" org="net.minidev" rev="1.3" conf="dev" />
-        <dependency name="slf4j-api" org="org.slf4j" rev="1.7.7" conf="dev" />
-        <dependency name="fest-assert" org="org.easytesting" rev="1.4" conf="dev" />
-        <dependency name="fest-util" org="org.easytesting" rev="1.2.5" conf="dev" />
+        <dependency name="junit" org="junit" rev="4.7" conf="local" />
+        <dependency name="mockito-all" org="org.mockito" rev="1.9.5" conf="local" />
+        <dependency name="json-path" org="com.jayway.jsonpath" rev="0.9.1" conf="local" />
+        <dependency name="json-smart" org="net.minidev" rev="1.3" conf="local" />
+        <dependency name="slf4j-api" org="org.slf4j" rev="1.7.7" conf="local" />
+        <dependency name="fest-assert" org="org.easytesting" rev="1.4" conf="local" />
+        <dependency name="fest-util" org="org.easytesting" rev="1.2.5" conf="local" />
 
     </dependencies>
 </ivy-module>
