--- a/Poker/ivy.xml
+++ b/Poker/ivy.xml
@@ -22,12 +22,21 @@
         <dependency name="spring-web" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-webmvc" org="org.springframework" rev="${spring-version}" />
         <dependency name="spring-test" org="org.springframework" rev="${spring-version}" conf="local" />
+        <dependency name="spring-tx" org="org.springframework" rev="4.2.1.RELEASE"/>
+        <dependency name="spring-orm" org="org.springframework" rev="${spring-version}" />
         
         <!-- Jackson -->
         <dependency name="jackson-core" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-annotations" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency name="jackson-databind" org="com.fasterxml.jackson.core" rev="${jackson-version}" />
         <dependency org="com.fasterxml.jackson.datatype" name="jackson-datatype-joda" rev="${jackson-version}" />
+        
+        <!-- Hibernate -->
+        <dependency name="hibernate-validator" org="org.hibernate" rev="5.2.2.Final" />
+        <dependency name="hibernate-core" org="org.hibernate" rev="5.0.2.Final"/>
+        <dependency name="hibernate-entitymanager" org="org.hibernate" rev="5.0.2.Final"/>
+        <dependency name="persistence-api" org="javax.persistence" rev="1.0"/>
+        <dependency name="h2" org="com.h2database" rev="1.4.189"/>
 
         <!-- AspectJ -->
         <dependency name="aopalliance" org="aopalliance" rev="1.0" />
@@ -38,7 +47,6 @@
         <dependency name="log4j" org="log4j" rev="1.2.17" />
         <dependency name="commons-logging" org="commons-logging" rev="1.1.3" />
         <dependency name="joda-time" org="joda-time" rev="2.4" />
-        <dependency name="hibernate-validator" org="org.hibernate" rev="5.1.2.Final" />
         <dependency name="validation-api" org="javax.validation" rev="1.1.0.Final" />
         <dependency name="jboss-logging" org="org.jboss.logging" rev="3.1.4.GA" />
         <dependency name="classmate" org="com.fasterxml" rev="1.0.0" />
